添加依赖声明

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,12 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 
+dependencies = [
+    "fonttools==4.39.4",
+    "Brotli==1.0.9",
+    "bdffont==0.0.7",
+]
+
 [project.urls]
 homepage = "https://github.com/TakWolf/pixel-font-builder"
 source = "https://github.com/TakWolf/pixel-font-builder"
