--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,9 @@ classifiers = [
 ]
 
 dependencies = [
-    "fonttools==4.39.4",
-    "Brotli==1.0.9",
-    "bdffont==0.0.7",
+    "fonttools>=4.39.4",
+    "Brotli>=1.0.9",
+    "bdffont>=0.0.10",
 ]
 
 [project.urls]
