--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,11 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/project/pixel-font-builder/
+    permissions:
+      id-token: write
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -22,6 +27,3 @@ jobs:
       run: python -m build
     - name: Publish
       uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
