--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "fonttools>=4.51.0",
     "Brotli>=1.1.0",
     "bdffont>=0.0.19",
+    "pcffont>=0.0.2",
 ]
 
 [project.urls]
