--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,7 @@ classifiers = [
 ]
 
 dependencies = [
-    "fonttools>=4.53.1",
-    "Brotli>=1.1.0",
+    "fonttools[woff]>=4.55.3",
     "bdffont>=0.0.26",
     "pcffont>=0.0.15",
 ]
