--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-fonttools==4.53.1
-Brotli==1.1.0
+fonttools[woff]==4.55.3
 bdffont==0.0.26
 pcffont==0.0.15
 
-pytest==8.3.2
+pytest==8.3.4
 pypng==0.20220715.0
